--- a/assignment2/Assignment2.ipynb
+++ b/assignment2/Assignment2.ipynb
@@ -698,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_batch: 168/408, train_loss: 0.00036722951335832477, valid_acc: 0.9990521327014218\r"
+      "current_batch: 297/408, train_loss: 7.145258132368326e-05, valid_acc: 1.00905213270142188\r"
      ]
     }
    ],
@@ -725,12 +725,12 @@
     "    \"\"\"\n",
     "    model = Sequential()\n",
     "    # structure: (batch, 128*64*3) -> (batch, 256) -> (batch, 64) -> (batch, 1)\n",
-    "    model.add(Dense(units = 1024, activation = \"relu\", input_dim = 128 * 64 * 3))\n",
-    "    model.add(Dense(units = 512, activation = \"relu\"))\n",
-    "    model.add(Dense(units = 256, activation = \"relu\"))\n",
+    "    model.add(Dense(units = 256, activation = \"relu\", input_dim = 128 * 64 * 3))\n",
     "    model.add(Dense(units = 128, activation = \"relu\"))\n",
     "    model.add(Dense(units = 64, activation = \"relu\"))\n",
     "    model.add(Dense(units = 32, activation = \"relu\"))\n",
+    "    model.add(Dense(units = 16, activation = \"relu\"))\n",
+    "    model.add(Dense(units = 8, activation = \"relu\"))\n",
     "    model.add(Dense(units = 1, activation = \"sigmoid\"))\n",
     "    # using cross entropy as loss and adam as optimizer\n",
     "    model.compile(loss='binary_crossentropy',\n",
@@ -751,7 +751,7 @@
     "model = MLPModel()\n",
     "\n",
     "# training and validating on each batch\n",
-    "epoches = 5\n",
+    "epoches = 10\n",
     "train_loss = []\n",
     "valid_acc = []\n",
     "for each_epoch in tqdm(range(epoches)):\n",
