--- a/assignment3/test.ipynb
+++ b/assignment3/test.ipynb
@@ -648,7 +648,7 @@
     "                   activation='relu', input_shape=(128, 64, 3))\n",
     "\n",
     "add_layer1 = L.Flatten()\n",
-    "add_layer2 = L.Dense(128*64*1)\n",
+    "add_layer2 = L.Dense(128*64*1, activation='linear')\n",
     "add_layer3 = L.Reshape((128,64,1))\n",
     "\n",
     "vgg16_based_model = Sequential([header, vgg16_layers, add_layer1, add_layer2, add_layer3])\n",
